--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-licenseFileGenerator (or LFG) is a python script built upon one of my previous scripts (the gplFileCreator) which generates a LICENSE.md file in a user-specified local repository so the user doesn't have to do so on Github's website.  The difference between this script and my previous one is that this one has multiple choices of licenses to generate.
+licenseFileGenerator (or LFG) is a python script built upon one of my previous scripts (the gplFileCreator) which generates a LICENSE file in a user-specified local repository so the user doesn't have to do so on Github's website.  The difference between this script and my previous one is that this one has multiple choices of licenses to generate.
 
 This program uses the LFG_Licenses repo also hosted on this account to copy the text for each license.  Because of this, you must be connected to the internet for this program to work properly.
 
